# voucher.io

./: .gitignore  Dockerfile  Makefile  README.md  \  alembic.ini  bu_voucher.db  create_db_001  embedded.db  embedded.db-shm  embedded.db-wal  input_vouchers.csv  package-lock.json  pyproject.toml  voucher.db  voucher2.db
.github/workflows/: cd.yml  ci.yml
alembic/: env.py
alembic/versions/: 70ba03f860a4_add_user_password.py  72a5141f0f13_create_vouchers.py  a3e6e364c919_add_user_last_login.py  c63bc2a335c6_add_users_table.py
app/: auth.html  index.html
app/css/: style.css
app/scripts/: app.js  config.js  main.js
app/scripts/api/: auth.js  vouchers.js
app/scripts/dom/: dom.js
app/scripts/ui/: ui.js
app/src/: app-auth.js  app-main.js
app/src/api/: auth.js  vouchers.js
app/src/auth/: auth-dom.js  auth-ui.js
app/src/config/: config.js
app/src/main/: dom.js  ui.js
db/: db.json
learn/: index.html
src/: clicommands.py  config.py  main.py  repl.py  voucher.py
src/cli/: clicommands.py  repl.py
src/cli/handlers/: base.py  exit.py  help.py  user.py  voucher.py
src/db/: db.py  models.py
src/user/: auth.py  models.py
src/voucher/: db.py  helper.py  models.py  voucher.py
src/web/: app.py  handler.py  jsonhelper.py  server.py
src/web/handlers/: base.py  user.py  voucher.py
tests/: base.py  context.py  test_auth.py  test_cli.py  test_commands.py  test_data.py  test_db.py  test_db_user.py  test_helper.py  test_http.py  test_users.py  test_voucher.db  test_vouchers.py  test_web.py  tests.py
tests/data/: test_vouchers.csv
